infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  # number of pods running a particular image
  replicas: 1
  selector:
    # find all pods with label app 'client'
    matchLabels:
      app: client
  # configuration for the pod that the deployment is going to make
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: diegolarraz/client:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000  
      targetPort: 3000
