infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  # number of pods running a particular image
  replicas: 1
  selector:
    # find all pods with label app 'comments'
    matchLabels:
      app: comments
  # configuration for the pod that the deployment is going to make
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: diegolarraz/comments:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: comments-srv
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
