infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  # number of pods running a particular image
  replicas: 1
  selector:
    # find all pods with label app 'event-bus'
    matchLabels:
      app: event-bus
  # configuration for the pod that the deployment is going to make
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: diegolarraz/event-bus:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
