infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  # number of pods running a particular image
  replicas: 1
  selector:
    # find all pods with label app 'query'
    matchLabels:
      app: query
  # configuration for the pod that the deployment is going to make
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: diegolarraz/query:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
